--- a/H5活动/元宵/index.html
+++ b/H5活动/元宵/index.html
@@ -76,6 +76,6 @@
             <img class="qr_code"  src="images/qr_code.png"/>
         </div>
     </div>
-    <script src="js/game1.js"></script>
+    <script src="js/game.js"></script>
 </body>
 </html>
